--- a/fts/fts.1
+++ b/fts/fts.1
@@ -1,15 +1,15 @@
-.TH FTD 1 "04/21/2018" ftd "ftd manual"
+.TH FTS 1 "04/21/2018" fts "fts manual"
 
 .SH NAME
-ftd \- get bitmap font dimensions
+fts \- get bitmap font size
 
 .SH SYNOPSIS
-\fBftd\fR
+\fBfts\fR
 [\fIOPTION\fR]
 [\fIFONT PATH\fR]
 
 .SH DESCRIPTION
-get bitmap font dimensions in pixels
+get bitmap font size in pixels
 
 .SH OPTIONS
 .TP
