--- a/todo
+++ b/todo
@@ -7,15 +7,15 @@ todo=~/.todo
 pri ()
     while read -r line; do
         echo "$((cpt++))    $line"
-    done < "$todo"
+    done < $todo
 
 del ()
     while read -r line; do
         (($1 != cpt++)) && echo "$line"
-    done < "$todo"
+    done < $todo
 
 case $1 in
-    add) echo       "$2" >> "$todo";;
-    del) echo "$(del $2)" > "$todo";;
+    add) echo       "$2" >> $todo;;
+    del) echo "$(del $2)" > $todo;;
     *) pri
 esac
