--- a/todo
+++ b/todo
@@ -2,20 +2,21 @@
 #
 # todo script
 
+task=$2
 todo=~/.todo
 
 pri ()
     while read -r line; do
-        echo "$((cpt++))    $line"
+        echo "$((c++))    $line"
     done < "$todo"
 
 del ()
     while read -r line; do
-        (($1 != cpt++)) && echo "$line"
+        ((task != c++)) && echo "$line"
     done < "$todo"
 
 case $1 in
-    add) echo       "$2" >> "$todo";;
-    del) echo "$(del $2)" > "$todo";;
+    add) echo "$task" >> "$todo";;
+    del) echo "`del`"  > "$todo";;
     *) pri
 esac
