--- a/todo
+++ b/todo
@@ -15,8 +15,13 @@ del()
         ((task != c++)) && echo "$a"
     done < "$todo"
 
+
+if ((! $#)); then
+    pri; exit
+fi
+
 case $1 in
     add) echo "$task" >> "$todo";;
     del) echo "$(del)" > "$todo";;
-    *) pri
+    *) echo 'usage : todo <add|del> [text|n]'
 esac
