print help to stderr

--- a/scripts/.local/bin/todo
+++ b/scripts/.local/bin/todo
@@ -22,5 +22,5 @@ fi
 case $1 in
     add) echo "${@:2}" >> "$todo";;
     del) echo "$(del)"  > "$todo";;
-    *) echo 'usage : todo <add|del> [text|n]'
+    *) echo 'usage : todo <add|del> [text|n]' >&2
 esac
